# juicer

./: .gitignore  CMakeLists.txt  README.md
src/: juicer.c
src/lib/compression/: compression.h
src/lib/compression/rle/: rle.c  rle.h
src/lib/utils/: config.c  config.h  log.h
